--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "dependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
+    "formik": "^2.4.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "notiflix": "^3.2.7",
     "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.4.14",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
