--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.59.19",
     "@vitejs/plugin-react": "^4.2.1",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "formik": "^2.4.6",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.454.0",
     "match-sorter": "^6.3.4",
     "notiflix": "^3.2.7",
     "postcss": "^8.4.47",
