--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
+    "js-cookie": "^3.0.5",
     "localforage": "^1.10.0",
     "lucide-react": "^0.454.0",
     "match-sorter": "^6.3.4",
@@ -25,7 +26,9 @@
     "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.4.14",
     "vite": "^5.2.0",
