--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
     "tailwindcss": "^3.4.14",
     "vite": "^5.2.0",
