--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "postcss": "^8.4.47",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
