--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.59.19",
     "@vitejs/plugin-react": "^4.2.1",
     "aos": "^2.3.4",
